# Wireless_module

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cppcheck_result.txt  flash_script.sh  partitions.csv  sdkconfig  static_scan.sh  tscan_result.txt  vscode_optimize.py
main/: CMakeLists.txt  main.c
main/board/: board.c  board.h
main/cableio/uart/: uart_manager.c  uart_manager.h
main/protos/: message.pb.c  message.pb.h  message.proto
main/third_lib/asan/: McuASAN.c  McuASAN.h  McuASANconfig.h  McuLog.h
main/third_lib/crc/: crc32.c  crc32.h
main/third_lib/leptasan/: leptasan.c  leptasan.h  leptasan_config.h  leptasan_log.h
main/wireless/wifi_station/: wifi_station.c  wifi_station.h
main/wireless/wifi_station/service/get_weather/: get_weather.c  get_weather.h
main/wireless/wifi_station/service/sync_time/: sync_time.c  sync_time.h
main/wireless/wifi_station/service/update_firmware/: update_firmware.c  update_firmware.h
